--- a/Pipfile
+++ b/Pipfile
@@ -9,8 +9,9 @@ openpyxl = "*"
 pandas = "*"
 numpy = "*"
 streamlit = "*"
+watchdog = "*"
 
 [dev-packages]
 
 [requires]
-python_version = "3.8"
+python_version = ">3.8"
